[tool.poetry]
name = "traceroute-ip-map"
version = "0.1.0"
description = ""
authors = ["vtsiunchik <vtsiunchik@nwave.io>"]
readme = "README.md"
packages = [{include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.10"
folium = "^0.20.0"
geoip2 = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

